fix: increase color contrast of date text

--- a/assets/css/dark.scss
+++ b/assets/css/dark.scss
@@ -19,6 +19,6 @@
   $text: $grey-light;
   $text-light: $grey-lighter;
   $text-strong: $grey-lightest;
-  $custom-colors: ("secondary": (rgba(#fff, .6), rgba(#000, .6)));
+  $custom-colors: ("secondary": (rgba(#fff, .7), rgba(#000, .7)));
   @import 'bulma';
 }
