--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,8 +10,8 @@ $primary: $orange;
 $link: $orange;
 $custom-colors: (
   'secondary': (
-    rgba(#000, 0.6),
-    rgba(#fff, 0.6)
+    rgba(#000, 0.7),
+    rgba(#fff, 0.7)
   )
 );
 
